--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -9,7 +9,7 @@
 @color-orange: #f5a623;
 @color-purple: #8c3fbf;
 @color-dark-purple: #320161;
-
+@color-main-purple: #3532d5;
 /*
 @color-pink-gradient: fade(#f14d4d, 15%);
 @color-purple-gradient: fade(@color-purple, 15%);
