fixed jobs landing page issue

--- a/Cloudents.Web/ClientApp/components/landing-pages/style.less
+++ b/Cloudents.Web/ClientApp/components/landing-pages/style.less
@@ -82,7 +82,7 @@
     }
   }
 
-  &.landing-jobs {
+  &.landing-job {
     .zipRecruiter {
       .responsive-property(width, 150px, null, 109px);
     }
