--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -15,6 +15,10 @@
 
 .search-b-wrapper {
   position: relative;
+
+  input[type="search"]{
+    .clear-field-btn;
+  }
 }
 
 .search-b, .search-menu {
