--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -171,6 +171,7 @@
             input {
                 .responsive-property(font-size, 20px, null, 16px);
                 .responsive-property(letter-spacing, -0.5px, null, -0.4px);
+                .clear-field-btn;
             }
         }
     }
