make babel_env variable for babel distinction

--- a/Cloudents.Web/Views/Shared/Index.cshtml
+++ b/Cloudents.Web/Views/Shared/Index.cshtml
@@ -14,7 +14,7 @@
 
 
 <div id="app" asp-prerender-module="ClientApp/renderOnServer">Loading....</div>
-@*<div id="app">Loading....</div>*@
+@*<div idclean-webpack-plugin="app">Loading....</div>*@
 <div class="cdn-only2"></div>
 
 @section scripts {
