Splitted uni logic from Search input into UniSearch input

--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -135,4 +135,11 @@
       height: 40px;
     }
   }
+  .list__tile__title{
+    color: black;
+
+    .highlight {
+      color: #302eb5;
+    }
+  }
 }
