Modified arrow navigation

--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -139,11 +139,11 @@
     width: 106px;
     border-radius: 4px;
 
-    i {
+    i.icon {
       color: @color-white;
     }
 
-    @media(max-width: @screen-sm) {
+    @media(max-width: @screen-xs) {
       margin: 0;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
