Case 10188: Added smart app banner to the main header in site

--- a/Cloudents.Web/ClientApp/components/smartAppBanner/smartAppBanner.less
+++ b/Cloudents.Web/ClientApp/components/smartAppBanner/smartAppBanner.less
@@ -5,6 +5,13 @@
   height: @bannerHeight;
   margin-bottom: 3px; //to give space for drop shadow created by elevation-1 class
 
+  &.fixed-top{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+  }
+
   &, .data, .content {
     display: flex;
     align-items: center;
