Smart app banner position fix

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -64,6 +64,12 @@
         justify-content: space-between;
     }
 
+    .smart-app-banner ~ .main{
+        @media(max-width: 599px) {
+            margin-top: 84px;
+        }
+    }
+
     .line {
         .responsive-property(margin-right, 16px, null, 0);
         .responsive-property(margin-left, 16px, 24px, 8px);
