--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -52,6 +52,7 @@
     border-radius: 4px;
     margin-top: 8px;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
+    overflow: auto;
 
     @media (max-width: @screen-xs) {
       overflow: scroll;
