--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -223,6 +223,7 @@
 //@navBarHeightMobile: 96px;
 @resultsFilterWidth: 230px;
 //@resultsTabsHeight: 52px;
+@registrationFieldHeight: 48px;
 @screen-xs: 599px;
 @screen-sm: 959px;
 @screen-md: 1263px;
