implemented google signup

--- a/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerEmail/registerEmail.less
@@ -1,5 +1,5 @@
 @import "../../../../mixin.less";
-.g-signin-button {
+.google-signin {
   background: #4285f4;
   font-size: 18px;
   font-weight: normal;
