Implemented phone registration

--- a/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
+++ b/Cloudents.Web/ClientApp/components/registration/steps/registerPhone/registerPhone.less
@@ -1,1 +1,9 @@
 @import "../../../../mixin.less";
+select{ // TODO: this is temporally - we need to decide what element to implement here
+  width: 100%;
+  height: 48px;
+  border: 1px solid;
+  padding: 10px;
+  font-size: 16px;
+  -webkit-appearance: menulist;
+}
