Implemented regisration api calls

--- a/Cloudents.Web/Views/Blockchain/Index.cshtml
+++ b/Cloudents.Web/Views/Blockchain/Index.cshtml
@@ -1,6 +1,35 @@
 ﻿<html>
 <head>
+    <style>
+
+    </style>
 
 </head>
-<body>Hello world</body>
+<body>
+    <form>
+        <h2>From</div>
+        <input id="irena" type="radio" name="from" />
+        <label for="irena">Irena</label>
+        <input id="irena" type="radio" name="from" />
+        <label for="irena">Ram</label>
+        <input id="irena" type="radio" name="from" />
+        <label for="irena">Eidan</label>
+
+        <br />
+        <h2>To</h2>
+        <input id="irena" type="radio" name="to" />
+        <label for="irena">Irena</label>
+        <input id="irena" type="radio" name="to" />
+        <label for="irena">Ram</label>
+        <input id="irena" type="radio" name="to" />
+        <label for="irena">Eidan</label>
+        <br />
+        <label for="amount">Transfer</label>
+        <input type="number" style="background: white" id="amount" />
+        <br />
+        <input class="button" type="submit" value="Submit"/>
+    </form>
+
+
+</body>
 </html>
