--- a/Cloudents.Web/Views/Blockchain/Index.cshtml
+++ b/Cloudents.Web/Views/Blockchain/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form>
-        <h2>From</div>
+        <h2>From</h2>
         <input id="irena" type="radio" name="from" />
         <label for="irena">Irena</label>
         <input id="irena" type="radio" name="from" />
@@ -27,9 +27,31 @@
         <label for="amount">Transfer</label>
         <input type="number" style="background: white" id="amount" />
         <br />
-        <input class="button" type="submit" value="Submit"/>
+        <input class="button" type="submit" onclick="sendTx" value="Submit"/>
     </form>
 
+    @*<script type="text/javascript">
+        function sendTx() {
+            var xmlhttp = new XMLHttpRequest();
+
+            xmlhttp.onreadystatechange = function () {
+                if (xmlhttp.readyState == XMLHttpRequest.DONE) {   // XMLHttpRequest.DONE == 4
+                    if (xmlhttp.status == 200) {
+                        document.getElementById("myDiv").innerHTML = xmlhttp.responseText;
+                    }
+                    else if (xmlhttp.status == 400) {
+                        alert('There was an error 400');
+                    }
+                    else {
+                        alert('something else other than 200 was returned');
+                    }
+                }
+            };
+
+            xmlhttp.open("POST", "localhost", true);
+            xmlhttp.send(100);
+        }
+     </script>*@
 
 </body>
 </html>
